<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/paket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B0DCFA"
        android:text="@string/paket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#A5D8FB"
        android:text="@string/cups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paket" />

    <Button
        android:id="@+id/fireWorks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9AD4FB"
        android:text="@string/fireWorks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cups" />

    <Button
        android:id="@+id/plasticBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#91D2FD"
        android:text="@string/plasticBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fireWorks" />

    <Button
        android:id="@+id/factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#8FD1FD"
        android:text="@string/factory"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plasticBox" />

</androidx.constraintlayout.widget.ConstraintLayout>